# data-saturday-unseen-failures

./: .gitignore  LICENSE  README.md  behave.ini  pyproject.toml
.devcontainer/: devcontainer.json  post-start-command.sh  requirements.txt
data/: warehouse_inventory_breda.csv  warehouse_inventory_emmen.csv  warehouse_inventory_pytest.csv
demo/: great-expectations-demo.py
src/localpyspark/: main.py  test.py
src/localpyspark/forcasting/: forcasting.py
src/localpyspark/modulea/: module.py
src/localpyspark/stockmanagement/: stockmanagement.py
src/localpyspark/voorraadbeheer/: voorraadbeheer.py
tests/bddtests/features/: environment.py  stock.feature  voorraad.feature
tests/bddtests/features/steps/: stock_steps.py  utils.py  voorraad_steps.py
tests/unittests/: test_stock.py  test_voorraad.py
